Version 0.2.5
	- fixed some errors in writing primary index files
		level 2 index entries are now supported
	- readded time of modification when writing the header

Version 0.2.4
	- Paradox tables can be read by the Paradox software if the
	  database is stored as version 5.0
	- added prototypes for PX_[get|set]_[parameter|value]()
	- all strings passed to PX_[get|set]_[parameter|value]() are of
	  type const char
	- PX_get_[parameter|value]() return value in passed parameter and
	  return an error code instead
	- Implemented function PX_get_parameter()
	- All PX_get_data_xxx() functions return -1 on error, 0 if the
	  field value is NULL and 1 otherwise.

Version 0.2.3
	- updated many error messages
	- fixed segm fault when PX_close() was called more than once
	- initial support for writing a primary index (experimental)

Version 0.2.2
	- initial multi language support
	- added memory profiling
	- free some more memory in PX_delete()
	- renamed internal memory management functions from px_malloc, px_realloc,
	  px_free to _px_malloc, _px_realloc, _px_free
	- call pxdoc->free instead of px_free
	- fixed potential buffer overrun
	- PX_set_[target|input]encoding returns -2 if recoding is not supported

Version 0.2.1
	- PX_create_fp uses a fixed header size which was to small for databases with
	  many fields. The header size is now calculated and set accordingly.

Version 0.2.0
	- update to latest autoconf tools
	- added support for pkg-config
	- added new function PX_new3() which allows to also set user data which
	  is passed to the error handler
	- added generic way to set and get parameters
	- added support for external read, write, tell, seek functions

Version 0.1.9
	- encoding for data, that is to be written in a record can be set
	- build internal primary index for faster access. This will not
	  speed up searching but accessing records by record number.
	- fixed reading of primary index, now that I understand how it works